updating to include gemfile for creating gemfile install

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.DS_Store
 _site
 .sass-cache
 .jekyll-metadata
@@ -5,6 +6,7 @@ yarn.lock
 Gemfile.lock
 package-lock.json
 node_modules/
+*.gem
 
 ### macOS ###
 *.DS_Store
